SDM845: Implement a configpanel to turn on/off flicker-free
Change-Id: I29dab8c69ae632567473050570c92770c7d69151

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -8,6 +8,10 @@ on boot
     # Fingerprint
     chown system system /sys/devices/platform/soc/soc:goodix_fp/proximity_state
 
+    # Flicker-free
+    chmod 0600 /sys/devices/platform/soc/soc\:qcom,dsi-display@18/msm_fb_ea_enable
+    chown system system /sys/devices/platform/soc/soc\:qcom,dsi-display@18/msm_fb_ea_enable
+
 on charger
     write /sys/class/backlight/panel0-backlight/brightness 150
 
