sdm845-common: Write to otg_switch node in our own init script
* Not sure why but /vendor/etc/init/hw/init.oem.rc property
  listeners aren't getting triggered thus I'm moving it here
  as it's not really worth figuring out.

Change-Id: I5b3d17745fbc086fbd560cfc122dada7b4b98272

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -12,6 +12,9 @@ on boot
     chmod 0600 /sys/devices/platform/soc/soc\:qcom,dsi-display@18/msm_fb_ea_enable
     chown system system /sys/devices/platform/soc/soc\:qcom,dsi-display@18/msm_fb_ea_enable
 
+    # OTG
+    write /sys/class/power_supply/usb/otg_switch 1
+
 on charger
     write /sys/class/backlight/panel0-backlight/brightness 150
 
